# sgs

./: README.md  build.py  pyproject.toml
src/sgs/: __init__.py  anti-cheat-toolkit.py  config.json  config_manager.py  disconnect_manager.py  disconnect_strategy.py
