[project]
name = "sgs-toolkit"
version = "0.1.0"
description = "三国杀工具集"
authors = [
    { name = "yshuai", email = "yuanshuai1995@outlook.com" }
]
dependencies = [
    "pyqt5~=5.15.9",
    "psutil~=5.9.0",
    "pygetwindow~=0.0.9",
    "pyautogui~=0.9.54",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.5.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sgs"]

[project.scripts]
sgs-toolkit = "src.sgs.disconnect_manager:main"
